--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   </head>
 
   <body>
-    <div class="container">
-      <header class="page-header">
+    <header class="page-header">
+      <div class="container header-container">
         <nav class="nav-header">
           <a class="logo header-logo" href="./index.html">
             Web<span class="logo-part">Studio</span></a
@@ -52,8 +52,8 @@
             </li>
           </ul>
         </address>
-      </header>
-    </div>
+      </div>
+    </header>
 
     <main>
       <div class="container">
