--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </header>
 
     <main>
-      <div class="container">
+      <div class="container-hero">
         <section class="main-page">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button-service">Order Service</button>
