--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <div class="container">
         <section class="desc-work">
-          <h2>Our strengths</h2>
+          <h2 class="visually-hidden">Our strengths</h2>
           <ul class="descr-list">
             <li class="desc-iteam">
               <h3 class="title-desc">Strategy</h3>
