--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         </section>
       </div>
 
-      <div class="container">
+      <div class="container-team">
         <section class="team-list">
           <h2 class="title-section">Our Team</h2>
           <ul class="team-iteam">
