--- a/index.html
+++ b/index.html
@@ -151,14 +151,11 @@
           <h2 class="title-section">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="port-iteam">
-              <img
-                src="./images/img-1.jpg"
-                alt="Banking App App"
-                width="360"
-                height="300"
-              />
-              <h3 class="title-description-port">Banking App</h3>
-              <p class="descr-text">App</p>
+              <img src="./images/img-1.jpg" alt="Banking App App" width="360" />
+              <div class="container-port">
+                <h3 class="title-description-port">Banking App</h3>
+                <p class="descr-text">App</p>
+              </div>
             </li>
 
             <li class="port-iteam">
@@ -166,10 +163,11 @@
                 src="./images/img-2.jpg"
                 alt="Cashless Payment Marketing"
                 width="360"
-                height="300"
               />
-              <h3 class="title-description-port">Cashless Payment</h3>
-              <p class="descr-text">Marketing</p>
+              <div class="container-port">
+                <h3 class="title-description-port">Cashless Payment</h3>
+                <p class="descr-text">Marketing</p>
+              </div>
             </li>
 
             <li class="port-iteam">
@@ -177,11 +175,12 @@
                 src="./images/img-3.jpg"
                 alt="Meditation App App"
                 width="360"
-                height="300"
               />
-              <h3 class="title-description-port">Meditation App</h3>
-              <p class="descr-text">App</p>
-              >
+
+              <div class="container-port">
+                <h3 class="title-description-port">Meditation App</h3>
+                <p class="descr-text">App</p>
+              </div>
             </li>
 
             <li class="port-iteam">
@@ -189,10 +188,12 @@
                 src="./images/img-4.jpg"
                 alt="Taxi Service Marketing"
                 width="360"
-                height="300"
               />
-              <h3 class="title-description-port">Taxi Service</h3>
-              <p class="descr-text">Marketing</p>
+
+              <div class="container-port">
+                <h3 class="title-description-port">Taxi Service</h3>
+                <p class="descr-text">Marketing</p>
+              </div>
             </li>
 
             <li class="port-iteam">
@@ -200,11 +201,12 @@
                 src="./images/img-5.jpg"
                 alt="Screen Illustrations Design"
                 width="360"
-                height="300"
               />
 
-              <h3 class="title-description-port">Screen Illustrations</h3>
-              <p class="descr-text">Design</p>
+              <div class="container-port">
+                <h3 class="title-description-port">Screen Illustrations</h3>
+                <p class="descr-text">Design</p>
+              </div>
             </li>
 
             <li class="port-iteam">
@@ -212,11 +214,12 @@
                 src="./images/img-6.jpg"
                 alt="Online Courses Marketing"
                 width="360"
-                height="300"
               />
 
-              <h3 class="title-description-port">Online Courses</h3>
-              <p class="descr-text">Marketing</p>
+              <div class="container-port">
+                <h3 class="title-description-port">Online Courses</h3>
+                <p class="descr-text">Marketing</p>
+              </div>
             </li>
           </ul>
         </section>
