--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </div>
     </main>
 
-    <div class="container">
+    <div class="container-footer">
       <footer class="page-end">
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
