--- a/index.html
+++ b/index.html
@@ -56,13 +56,12 @@
     </header>
 
     <main>
-      
-        <section class="main-page">
-          <div class="container-hero"></div>
+      <section class="main-page">
+        <div class="container-hero">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button-service">Order Service</button>
-        </section>
-      </div>
+        </div>
+      </section>
 
       <div class="container">
         <section class="desc-work">
