--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <main>
       <section class="main-page">
-        <div class="container-hero">
+        <div class="container container-hero">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
           <button type="button" class="button-service">Order Service</button>
         </div>
