--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </div>
       </section>
 
-      <div class="container-team">
-        <section class="team-list">
+      <section class="team-list">
+        <div class="container container-team">
           <h2 class="title-section">Our Team</h2>
           <ul class="team-iteam">
             <li class="title-desc">
@@ -143,11 +143,11 @@
               <p class="desc-member-team">UI Designer</p>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
 
-      <div class="container">
-        <section>
+      <section>
+        <div class="container">
           <h2 class="title-section">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="port-iteam">
@@ -222,8 +222,8 @@
               </div>
             </li>
           </ul>
-        </section>
-      </div>
+        </div>
+      </section>
     </main>
 
     <div class="container-footer">
