--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         </div>
       </section>
 
-      <section>
+      <section class="portfolio">
         <div class="container">
           <h2 class="title-section">Our Portfolio</h2>
           <ul class="portfolio-list">
