--- a/index.html
+++ b/index.html
@@ -112,8 +112,10 @@
                 alt="Mark Guerrero Product Designer"
                 width="264"
               />
-              <h3 class="member-team">Mark Guerrero</h3>
-              <p class="desc-member-team">Product Designer</p>
+              <div class="container-name-team">
+                <h3 class="member-team">Mark Guerrero</h3>
+                <p class="desc-member-team">Product Designer</p>
+              </div>
             </li>
             <li class="title-desc">
               <img
@@ -121,8 +123,10 @@
                 alt="Tom Ford Frontend Developer"
                 width="264"
               />
-              <h3 class="member-team">Tom Ford</h3>
-              <p class="desc-member-team">Frontend Developer</p>
+              <div class="container-name-team">
+                <h3 class="member-team">Tom Ford</h3>
+                <p class="desc-member-team">Frontend Developer</p>
+              </div>
             </li>
             <li class="title-desc">
               <img
@@ -130,8 +134,10 @@
                 alt="Camila Garcia Marketing"
                 width="264"
               />
-              <h3 class="member-team">Camila Garcia</h3>
-              <p class="desc-member-team">Marketing</p>
+              <div class="container-name-team">
+                <h3 class="member-team">Camila Garcia</h3>
+                <p class="desc-member-team">Marketing</p>
+              </div>
             </li>
             <li class="title-desc">
               <img
@@ -139,8 +145,10 @@
                 alt="Daniel Wilson UI Designer"
                 width="264"
               />
-              <h3 class="member-team">Daniel Wilson</h3>
-              <p class="desc-member-team">UI Designer</p>
+              <div class="container-name-team">
+                <h3 class="member-team">Daniel Wilson</h3>
+                <p class="desc-member-team">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
