--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       </section>
 
       <section class="portfolio">
-        <div class="container container-port">
+        <div class="container">
           <h2 class="title-section">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="port-iteam">
