--- a/index.html
+++ b/index.html
@@ -234,8 +234,9 @@
       </section>
     </main>
 
-    <div class="container-footer">
+    
       <footer class="page-end">
+        <div class="container-footer"></div>
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
@@ -244,7 +245,8 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+         </div>
       </footer>
-    </div>
+   
   </body>
 </html>
