--- a/index.html
+++ b/index.html
@@ -234,9 +234,8 @@
       </section>
     </main>
 
-    
-      <footer class="page-end">
-        <div class="container-footer"></div>
+    <footer class="page-end">
+      <div class="container-footer">
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
@@ -245,8 +244,7 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
-         </div>
-      </footer>
-   
+      </div>
+    </footer>
   </body>
 </html>
