--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
     </main>
 
     <footer class="page-end">
-      <div class="container-footer">
+      <div class="container container-footer">
         <a class="logo footer-logo" href="./index.html"
           >Web<span class="logo-part">Studio</span></a
         >
